[package]
name = "greedia3"
version = "0.1.0"
authors = ["k3d3"]
edition = "2018"

[features]
sctest = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byte-ranger = { path = "byte-ranger" }
timecode_rs = { path = "timecode_rs" }
leaky-bucket = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.3", features = [ "fs" ] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
toml = "0.5"
chrono = { version = "0.4.15", features = ["serde"] }
#rocksdb = "0.13.0"
#flatbuffers = "0.6.1"
oauth2 = { version = "4.0.0-alpha.6" }
reqwest = { version = "0.11", features = ["json", "trust-dns", "stream"] }
itertools = "0.10"
libc = "0.2"
rclone-crypt = "0.1"
walkdir = "2.3"
polyfuse = "0.4.1"
polyfuse-tokio = "0.2"
byteorder = "1.3"
hex = "0.4"
rustc-hash = "1.1"
async-trait = "0.1"
access-queue = "1.1"
async-stream = "0.3"
flume = "0.10"
bytes = "1.0"
rkyv = "0.4"
sled = "0.34"

[dev-dependencies]
tempfile = "3.2"
proptest = "1.0"
proptest-derive = "0.3"
