[package]
name = "greedia"
version = "0.1.0"
authors = ["k3d3"]
edition = "2018"

[features]
sctest = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byte-ranger = { path = "byte-ranger" }
timecode_rs = { path = "timecode_rs" }
leaky-bucket = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.5", features = ["fs", "rt", "net", "sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
structopt = "0.3"
toml = "0.5"
chrono = { version = "0.4.15", features = ["serde"] }
oauth2 = { version = "4.0" }
reqwest = { version = "0.11", features = ["json", "trust-dns", "stream"] }
itertools = "0.10"
libc = "0.2"
rclone-crypt = "0.1"
walkdir = "2.3"
polyfuse = "0.4.1"
hex = "0.4"
rustc-hash = "1.1"
async-trait = "0.1"
access-queue = "1.1"
flume = "0.10"
bytes = "1.0"
rkyv = "0.6"
sled = "0.34"
tokio-stream = "0.1"
bitstream-io = { path = "../bitstream-io" }
phf = { version = "0.8", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.2.17"
jwt-simple = "0.9.4"

[dev-dependencies]
tempfile = "3.2"
proptest = "1.0"
proptest-derive = "0.3"
