[package]
name = "greedia"
version = "0.1.0"
authors = ["k3d3"]
edition = "2018"

[features]
sctest = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byte-ranger = { path = "vendor/byte-ranger" }
timecode_rs = { path = "vendor/timecode_rs" }
bitstream-io = { path = "vendor/bitstream-io" }
rclone-crypt = "0.1.4"
leaky-bucket = "0.11"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.10", features = ["fs", "rt", "net", "sync", "macros"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
structopt = "0.3"
toml = "0.5"
chrono = { version = "0.4.15", features = ["serde"] }
oauth2 = { version = "4.0" }
reqwest = { version = "0.11", features = ["json", "trust-dns", "stream"] }
itertools = "0.10"
libc = "0.2"
walkdir = "2.3"
polyfuse = "0.4.1"
hex = "0.4"
rustc-hash = "1.1"
async-trait = "0.1"
access-queue = "1.1"
flume = "0.10"
bytes = "1.0"
rkyv = { version = "0.7.20", features = ["archive_le"] }
sled = "0.34"
tokio-stream = "0.1"
phf = { version = "0.10", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3.1"
jwt-simple = "0.10.6"
once_cell = "1.8.0"
self_cell = "0.10.1"

[dev-dependencies]
tempfile = "3.2"
proptest = "1.0"
proptest-derive = "0.3"
